--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <div class="anu">
+              @TheAnumaan
+        </div>
+         <div class="navdiv">
+            <ul class="p">
+                <li ><a style="text-decoration: none; color: rgb(255, 255, 255);" href="">Home</a></li>
+                <li ><a style="text-decoration: none; color: rgb(255, 255, 255);" href="">About</a></li>
+                <li ><a style="text-decoration: none; color: rgb(255, 255, 255);" href="">Skills</a></li>
+                <li ><a style="text-decoration: none; color: rgb(255, 255, 255);" href="">Education</a></li>
+                <li><a  style="text-decoration: none; color: rgb(255, 255, 255);" href="">Contact</a></li>
+            </ul>
+         </div>
+    </nav>
+
+    <div class="mai">
+      <div class="right">
+          <img class="imgi" height=300px" src="pp.png" alt="">
+      </div>
+        <div class="left">
+          <p class="maintxt">Hi There ,<br> I'm Anumaan Whig <br>
+          I am into web development</p>
+          <div ><button class="btn">About Me</button></div>
+          <div>
+            <ul class="log">
+                <li  class="maan"><img id='1'class="fi" style="height: 40px;" src="gith.png" alt=""></li>
+                <li class="maan"><img class="se" style="height: 40px;" src="ins.jpeg" alt=""></li>
+                <li class="maan" ><img class="th" style="height: 40px;" src="twi.png" alt=""></li>
+            </ul>
+          </div>
+        </div>
+
+        
+    </div>
     
     <script src="script.js"></script>
 </body>
 </html>
+
